# vren

./: .clang-format  .gitignore  .gitmodules  0_introduction.html  10_occlusion_culling.html  11_clustered_shading.html  1_architecture_overview.html  2_render_graph.html  3_basic_renderer.html  4_debug_renderer.html  5_mesh_shader_renderer.html  6_reduce.html  7_blelloch_scan.html  8_radix_sort.html  9_bucket_sort.html  CMakeLists.txt  LICENSE  README.md  VRen.cmake  genindex.html  gpu_radix_sort.html  index.html  intro.html  objects.inv  search.html  searchindex.js  vcpkg.json
demo/: CMakeLists.txt
demo/src/: ai_scene_loader.cpp  ai_scene_loader.hpp  camera.hpp  main.cpp  obj_loader.cpp  obj_loader.hpp  tinygltf_loader.cpp  tinygltf_loader.hpp
test/: CMakeLists.txt  main.cpp  resource_container.cpp
vren/: CMakeLists.txt
vren/resources/: simple_draw.frag
vren/resources/shaders/: basic_draw.vert  basic_draw.vert.glsl  blelloch_scan.comp  blelloch_scan_downsweep.comp  bucket_sort_count.comp  bucket_sort_write.comp  build_bvh.comp  bvh_build.comp  clustered_assign.comp  clustered_shading.glsl  common.glsl  dbg_draw.frag  dbg_draw.vert  dbg_draw_line.vert  dbg_draw_point.vert  debug.glsl  debug_draw.frag  debug_draw.vert.glsl  deferred.frag  depth_buffer_copy.comp.glsl  depth_buffer_reduce.comp  depth_buffer_reduce.comp.glsl  draw.mesh  draw.mesh.glsl  draw.task  draw.task.glsl  pbr.glsl  pbr_draw.frag  pbr_draw.frag.glsl  pbr_draw.vert  primitives.glsl  radix_sort_count.comp  radix_sort_global_offset.comp  radix_sort_local_count.comp  radix_sort_reorder.comp  reduce.comp  vren.glsl
vren/src/: command_graph.cpp  command_graph.hpp  command_list.cpp  command_list.hpp  command_pool.cpp  command_pool.hpp  config.hpp  context.cpp  context.hpp  dbg_renderer.cpp  dbg_renderer.hpp  descriptor_pool.hpp  descriptor_set_pool.cpp  descriptor_set_pool.hpp  frame.cpp  frame.hpp  imgui_renderer.cpp  imgui_renderer.hpp  light_array.cpp  light_array.hpp  material.cpp  material.hpp  presenter.cpp  presenter.hpp  render_list.cpp  render_list.hpp  render_object.hpp  renderer.cpp  renderer.hpp  resource_container.hpp  shapes.hpp  simple_draw.cpp  simple_draw.hpp  toolbox.cpp  toolbox.hpp
vren/src/pooling/: command_pool.cpp  command_pool.hpp  descriptor_pool.cpp  descriptor_pool.hpp  fence_pool.cpp  fence_pool.hpp  object_pool.hpp  semaphore_pool.hpp
vren/src/pools/: command_pool.cpp  command_pool.hpp  descriptor_pool.cpp  fence_pool.cpp  fence_pool.hpp
vren/src/utils/: buffer.cpp  buffer.hpp  command_graph.hpp  image.cpp  image.hpp  image_layout_transitions.cpp  image_layout_transitions.hpp  misc.cpp  misc.hpp  profiler.cpp  profiler.hpp  shader.cpp  shader.hpp  vk_raii.cpp  vk_raii.hpp  vk_toolbox.cpp  vk_toolbox.hpp
vren/src/vk_helpers/: barrier.hpp  image.hpp  image_layout_transitions.cpp  misc.hpp  shader.cpp  vk_raii.hpp
vren/vren/: Context.cpp  Context.hpp  Toolbox.cpp  Toolbox.hpp  basic_renderer.cpp  camera.cpp  camera.hpp  config.hpp  context.cpp  context.hpp  dbg_renderer.cpp  dbg_renderer.hpp  debug_renderer.cpp  debug_renderer.hpp  depth_buffer_pyramid.cpp  depth_buffer_pyramid.hpp  gpu_repr.hpp  imgui_renderer.cpp  imgui_renderer.hpp  light.cpp  light.hpp  light_array.cpp  light_array.hpp  log.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_shader_draw_pass.cpp  mesh_shader_draw_pass.hpp  mesh_shader_renderer.cpp  mesh_shader_renderer.hpp  presenter.cpp  presenter.hpp  render_graph.cpp  render_graph.hpp  render_list.cpp  render_list.hpp  render_object.cpp  render_object.hpp  (+11 more)
vren/vren/base/: ResourceContainer.hpp  base.hpp  bounding_shape.cpp  fixed_capacity_vector.hpp  kd_tree.cpp  kd_tree.hpp  misc_utils.cpp  misc_utils.hpp  operation_fork.hpp  resource_container.hpp
vren/vren/mesh/: mesh.hpp  mesh_clusterizer.cpp
vren/vren/model/: basic_model_draw_buffer.hpp  basic_model_uploader.cpp  basic_model_uploader.hpp  br_model_specializer.hpp  br_model_uploader.cpp  br_model_uploader.hpp  clusterized_model.hpp  clusterized_model_draw_buffer.hpp  clusterized_model_uploader.cpp  clusterized_model_uploader.hpp  mesh.hpp  mesh_clusterizer.cpp  model.cpp  model.hpp  model_clusterizer.cpp  model_clusterizer.hpp  msr_model_loader.hpp  msr_model_specializer.cpp  msr_model_specializer.hpp  msr_model_uploader.cpp  msr_model_uploader.hpp  tinygltf_parser.cpp  tinygltf_parser.hpp
vren/vren/pipeline/: basic_renderer.cpp  basic_renderer.hpp  br_renderer.cpp  br_renderer.hpp  clustered_shading.cpp  clustered_shading.hpp  construct_light_array_bvh.cpp  construct_light_array_bvh.hpp  debug_bvh.cpp  debug_bvh.hpp  debug_renderer.cpp  debug_renderer.hpp  depth_buffer_pyramid.cpp  depth_buffer_pyramid.hpp  gbuffer.cpp  gbuffer.hpp  imgui_renderer.cpp  imgui_renderer.hpp  imgui_utils.hpp  mesh_shader_draw_pass.cpp  mesh_shader_draw_pass.hpp  mesh_shader_renderer.cpp  mesh_shader_renderer.hpp  msr_renderer.cpp  msr_renderer.hpp  profiler.cpp  profiler.hpp  render_graph.cpp  render_graph.hpp  render_target.hpp  vertex_pipeline_draw_pass.cpp  vertex_pipeline_draw_pass.hpp
vren/vren/pool/: command_pool.cpp  command_pool.hpp  descriptor_pool.cpp  descriptor_pool.hpp  object_pool.hpp
vren/vren/pools/: command_pool.cpp  descriptor_pool.cpp  descriptor_pool.hpp  object_pool.hpp
vren/vren/primitive/: blelloch_scan.cpp  blelloch_scan.hpp  (+4 more)
vren_demo/: CMakeLists.txt
vren_demo/src/: camera.cpp  main.cpp  profile.hpp  tinygltf_loader.cpp  tinygltf_loader.hpp  ui.cpp  ui.hpp
vren_demo/vren_demo/: app.cpp  app.hpp  blit_depth_buffer_pyramid.cpp  blit_depth_buffer_pyramid.hpp  camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  clustered_shading_debug.cpp  clustered_shading_debug.hpp  clusterized_model_debugger.cpp  clusterized_model_debugger.hpp  main.cpp  point_light_bouncer.cpp  point_light_bouncer.hpp  profile.hpp  tinygltf_loader.cpp  tinygltf_loader.hpp  ui.cpp  ui.hpp  visualize_bvh.cpp  visualize_bvh.hpp
vren_test/: CMakeLists.txt  blelloch_scan.cpp  kd_tree.cpp  main.cpp
vren_test/vren_test/: app.hpp  blelloch_scan.cpp  gpu_test_bench.hpp  main.cpp
(+270 files in other folders)
